# axiom-desktop

./: .gitignore  CONTRIBUTING.md  README.md  deps.txt  index.html  node_err.txt  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.js  style.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs
patches/: codemirror-languageserver+1.18.1.patch
scripts/: bundle-debugpy.js  bundle-jsdebug.js  bundle-vtsls.js  copy-pyright.js  optimize-resources.js
src/: main.js  style.css  themes.yaml
src-tauri/: Cargo.toml  cargo_errors.txt  error.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: debug.rs  lib.rs  live_server.rs  lsp.rs
src/modules/: breadcrumb.js  breakpoints.js  commands.js  contextmenu.js  debug.js  dialogs.js  editor.js  effects.js  explorer.js  features.js  files.js  fs.js  icons.js  keymap.js  languages.js  longLine.js  lsp.js  menubar.js  runner.js  search.js  state.js  statusbar.js  store.js  tabs.js  terminal.js  themes.js  utils.js  welcome.js  zoom.js
