[package]
name = "axiom-editor"
version = "0.1.0"
description = "Blazing fast code editor with multi language support, and all other neccessary things"
authors = ["Adyanth"]
license = "MIT"
repository = "https://github.com/adyanthm/axiom-desktop"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-store = "2.4.2"
tauri-plugin-shell = "2.3.5"
tauri-plugin-window-state = "2.4.1"
portable-pty = "0.9.0"
axum = "0.8.4"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs"] }
mime_guess = "2.0.5"
tokio-stream = { version = "0.1.18", features = ["sync"] }
futures-core = "0.3.32"

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
