[package]
name = "axiom-ide"
version = "0.1.0"
description = "Axiom IDE — A blazing-fast, ultra-lightweight code editor"
authors = ["adyanthm"]
license = "MIT"
repository = "https://github.com/adyanthm/axiom"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-store = "2.4.2"
tauri-plugin-shell = "2.3.5"
tauri-plugin-window-state = "2.4.1"
